--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/page 1.PNG" class="d-block w-100" alt="Page 1">
+            <img src="images/page 1.PNG" class="d-block w-100" id="C5" class="rounded" alt="Page 1">
           </div>
           <div class="carousel-item">
             <img src="..." class="d-block w-100" alt="...">
