inserted all of my page into the storybook

--- a/index.html
+++ b/index.html
@@ -17,16 +17,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
+                <a class="nav-link active" aria-current="page" href="#">my books</a>
               </li>
             </ul>
           </div>
@@ -38,10 +29,43 @@
             <img src="images/page 1.PNG" class="d-block w-100" id="C5" class="rounded" alt="Page 1">
           </div>
           <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="images/page 2.png" class="d-block w-100" alt="page 2">
           </div>
           <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="images/page 3.png" class="d-block w-100" alt="page 3">
+          </div>
+          <div class="carousel-item">
+            <img src="images/page 4.png" class="d-block w-100" alt="page 4">
+          </div>
+          <div class="carousel-item">
+            <img src="images/page 66.png" class="d-block w-100" alt="page 6">
+          </div>
+          <div class="carousel-item">
+            <img src="images/page 77.PNG" class="d-block w-100" alt="page 7">
+          </div>
+          <div class="carousel-item">
+            <img src="images/page 88.PNG" class="d-block w-100" alt="page 8">
+          </div>
+          <div class="carousel-item">
+            <img src="images/page 99.PNG" class="d-block w-100" alt="page 9">
+          </div>
+          <div class="carousel-item">
+            <img src="images/page 10.PNG" class="d-block w-100" alt="page 10">
+          </div>
+          <div class="carousel-item">
+            <img src="images/PAGE 11.PNG" class="d-block w-100" alt="page 11">
+          </div>
+          <div class="carousel-item">
+            <img src="images/page 12.PNG" class="d-block w-100" alt="page 12">
+          </div>
+          <div class="carousel-item">
+            <img src="images/page 13.PNG" class="d-block w-100" alt="page 13">
+          </div>
+          <div class="carousel-item">
+            <img src="images/page 14.PNG" class="d-block w-100" alt="page 14">
+          </div>
+          <div class="carousel-item">
+            <img src="images/page 15.PNG" class="d-block w-100" alt="page 15">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
