--- a/contacts.html
+++ b/contacts.html
@@ -7,9 +7,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital@1&display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@1,200&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
   <link href="style.css" rel="stylesheet" type="text/css" />
 
 <body>
@@ -23,6 +23,7 @@
 </html>
 
 <body>
+
   <body style="background-color:#849191;">
     <title>Work Experience</title>
     </head>
@@ -59,21 +60,25 @@
       </div>
     </nav>
     <br>
-    <h1>Welcome to my portfolio</h1>
-    <br>
-    <h2>
-        <p>I'm very excited to be showing you my portfolio. I am a Senior in Freehold High School currently in the Web
-          Design
-          Pathway Program. I've been in this program for around 3 years now and I learn a lot of things throughout my
-          time. I
-          like to play videogames, hangout with my friends, and build things.</p>
-      </h2>
-      <div class="text-center">
-        <div class="fade-in-image">
-          <img src="images/brandon.png">
-        </div>
+    <h1>Contacts</h1>
+  <h2>These are my socials if you want to contact me at anytime.</h2>
+  <br>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <img src="images/instagram.png">
+        <h2>brandonlu772</h2>
       </div>
     </div>
-  </body>
+  </div>
+  <br>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <img src="images/googlemail.png">
+        <h2>brandonlulu948@gmail.com</h2>
+      </div>
+    </div>
+  </div>
   <script src="script.js"></script>
-  </html>  
+</html>
