--- a/work.html
+++ b/work.html
@@ -23,6 +23,7 @@
 </html>
 
 <body>
+
   <body style="background-color:#849191;">
     <title>Work Experience</title>
     </head>
@@ -59,21 +60,16 @@
       </div>
     </nav>
     <br>
-    <h1>Welcome to my portfolio</h1>
-    <br>
-    <h2>
-        <p>I'm very excited to be showing you my portfolio. I am a Senior in Freehold High School currently in the Web
-          Design
-          Pathway Program. I've been in this program for around 3 years now and I learn a lot of things throughout my
-          time. I
-          like to play videogames, hangout with my friends, and build things.</p>
-      </h2>
-      <div class="text-center">
-        <div class="fade-in-image">
-          <img src="images/brandon.png">
-        </div>
-      </div>
+    <div class="text-center">
+      <h1>Work Experience</h1>
     </div>
+    <h2>Here are some of my work experience during my High School year</h2>
+    <div class="size">
+      <ul>
+        -Little Tokyo: Cashier and server
+      </ul>
+    </div>
+    <script src="script.js"></script>
   </body>
-  <script src="script.js"></script>
-  </html>  
+
+  </html> 
