--- a/education.html
+++ b/education.html
@@ -4,17 +4,20 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Portfolio</title>
+  <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital@1&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@1,200&display=swap" rel="stylesheet">
-  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+</head>
 
 <body>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
@@ -22,12 +25,12 @@
 
 </html>
 
-<body>
-  <body style="background-color:#849191;">
-    <title>Work Experience</title>
-    </head>
+<body style="background-color:#849191;">
+  <title>Portfolio</title>
+  </head>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-green">
+  <body>
+     <nav class="navbar navbar-expand-lg navbar-light bg-green">
       <style>
         .navbar-light {
           background: #8C9A9E;
@@ -42,7 +45,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="work.html">Work
+              <a class="nav-link active" aria-current="page" href="index.html">Work
                 Experience</a>
             </li>
             <li class="nav-item">
@@ -59,21 +62,24 @@
       </div>
     </nav>
     <br>
-    <h1>Welcome to my portfolio</h1>
+    <h1>Education</h1>
     <br>
-    <h2>
-        <p>I'm very excited to be showing you my portfolio. I am a Senior in Freehold High School currently in the Web
-          Design
-          Pathway Program. I've been in this program for around 3 years now and I learn a lot of things throughout my
-          time. I
-          like to play videogames, hangout with my friends, and build things.</p>
-      </h2>
-      <div class="text-center">
-        <div class="fade-in-image">
-          <img src="images/brandon.png">
-        </div>
-      </div>
-    </div>
+    <ul>
+      -4.1 GPA (weighted)
+    </ul>
+    <ul>
+      -Have a decile of 5 in my 2023 class
+    </ul>
+    <ul>
+    -Taken 4 years of math (Algebra 1, Geometry, Algebra 2, Pre-Calculus, AP Calculus AB)
+    </ul>
+    <ul>
+    -Current memeber of the Freehold High School Web Design Program and I'm also take the NJIT Web Development Class
+    </ul>
+    <ul>
+    -Member of Freehold High School TSA
+    </ul>
   </body>
   <script src="script.js"></script>
-  </html>  
+
+  </html> 
